--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <h1>Securitian</h1>
+  <h1>Securitian Blogging Coming soon........</h1>
 </body>
 </html>
