--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <h1>Securitian Blogging Coming Soon........</h1>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">Securitian</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Blogs</a></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+        </div>
+      </nav>
 </body>
 </html>
