--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Securitian</a>
@@ -17,6 +17,8 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
       <li><a href="#">Blogs</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
       <li><a href="#">About Us</a></li>
     </ul>
   </div>
