--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a class="navbar-brand" href="/">Securitian</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="/">Home</a></li>
       <li><a href="#">Blogs</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
